# theme-repo

./: .dockerignore  Dockerfile  LICENSE  README.md  entrypoint.sh  nginx.default.conf
backend/: .gitignore  Cargo.toml
backend/src/: cli.rs  format.rs  main.rs  template.rs  theme.rs  util.rs
backend/templates/: xresources
backend/themes/: example.toml
frontend/: package.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: CopyToClipboard.tsx  SnackbarContext.tsx  Theme.tsx  ThemeDialog.tsx  ThemesGrid.tsx
frontend/src/pages/: index.astro
