[package]
name = "theme-repo-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.17", features = ["full"] }
serde_json = "1.0"
url = "2.2"
toml = "0.5"
tinytemplate = "1.2"
